For 1.13:
	- Now use freely distributable font files. See the README in the
	  fonts directory.

	- EXTERNPROTOS can now reference PROTOS in the Extern'd file.

	- freewrlSystem now keeps a list of children; on doQuit it attempts
	  to remove these children from the system with a kill (child,SIGINT).
	  This solves a problem where wget can hang and leave the freewrl 
	  display thread around.

	- fixed a problem that caused add/remove children from EAI and
	  scripts to fail (segfault)

	- revised error messages where some field values are incorrect;
	  eg, putting a TextureCoord as a coord field of an IndexedFaceSet
	  now displays a more informative message.

	- now attempts to build on 64 bit athalon processors.

	- ColorRGBA nodes supported for IndexedFaceSet, and equiv. NOT
	  supported in scripting/eai yet.

	- updated Javascript version - new Mozilla SpiderMonkey version
	  is 1.5.